@startuml

title __DELEGUES's Class Diagram__\n

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueController {
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueDepartmentController {
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueDiplomaController {
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueDrugController {
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueDrugPresentation {
          }
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DeleguePratitionnerController {
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueRegionController {
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueReportController {
              + getReport()
              + getReports()
              + getReports()
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueSectorController {
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Delegues {
          class LPY.appliVisiteur.Controller.Delegues.DelegueWorkedTimeController {
          }
        }
      }
    }
  

  LPY.appliVisiteur.Controller.Delegues.DelegueController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorUserController
  LPY.appliVisiteur.Controller.Delegues.DelegueDepartmentController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorDepartmentController
  LPY.appliVisiteur.Controller.Delegues.DelegueDiplomaController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorDiplomaController
  LPY.appliVisiteur.Controller.Delegues.DelegueDrugController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorDrugController
  LPY.appliVisiteur.Controller.Delegues.DelegueDrugPresentation -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorDrugPresentationController
  LPY.appliVisiteur.Controller.Delegues.DeleguePratitionnerController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorPratitionnerController
  LPY.appliVisiteur.Controller.Delegues.DelegueRegionController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorRegionController
  LPY.appliVisiteur.Controller.Delegues.DelegueReportController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorReportController
  LPY.appliVisiteur.Controller.Delegues.DelegueReportController o-- LPY.appliVisiteur.Model.Repository.UserRepository : userRepository
  LPY.appliVisiteur.Controller.Delegues.DelegueSectorController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorSectorController
  LPY.appliVisiteur.Controller.Delegues.DelegueWorkedTimeController -up-|> LPY.appliVisiteur.Controller.Visiteur.VisitorWorkedTimeController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
